@@ -1,4 +1,4 @@
-.\" RCSid $Id: dctimestep.1,v 1.4 2013/01/11 05:07:47 greg Exp $"
+.\" RCSid $Id: dctimestep.1,v 1.5 2013/01/11 17:21:39 greg Exp $"
 .TH DCTIMESTEP 1 12/09/09 RADIANCE
 .SH NAME
 dctimestep - compute annual simulation time-step(s) via matrix multiplication
@@ -8,6 +8,8 @@ dctimestep - compute annual simulation time-step(s) via matrix multiplication
 .B "\-n nsteps"
 ][
 .B "\-o ospec"
+][
+.B "\-i{f|d}
 ]
 .B DCspec
 [
@@ -19,6 +21,8 @@ dctimestep - compute annual simulation time-step(s) via matrix multiplication
 .B "\-n nsteps"
 ][
 .B "\-o ospec"
+][
+.B "\-i{f|d}
 ]
 .B Vspec
 .B Tbsdf.xml
@@ -60,9 +64,17 @@ The final input is the sky contribution vector or matrix,
 usually computed by
 .I genskyvec(1),
 which may be passed on the standard input.
-This data must be in ASCII format, whereas the View and Daylight matrices
+This data is expected to be in ASCII format, whereas the
+View and Daylight matrices
 are more efficiently represented as binary float data if machine
 byte-order is not an issue.
+The
+.I \-if
+or
+.I \-id
+option may be used to specify that sky data is in float or double
+format, instead.
+(Note that binary double data may not be read from stdin.)\0
 .PP
 Sent to the standard output of
 .I dctimestep
